# data-model-navigator

./: .gitignore  README.md  dmn  pyproject.toml
examples/: sample_model.json
src/datamodel_navigator/: __init__.py  __main__.py  cli.py  curation.py  discovery.py  io_utils.py  llm_guidance.py  models.py  viewer.py
tests/: test_cli.py  test_curation.py  test_discovery.py  test_llm_guidance.py  test_viewer.py
