[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-model-navigator"
version = "0.1.0"
description = "Local tool to discover MongoDB/PostgreSQL schemas, curate relationships, and view a navigable ER model"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Data Model Navigator"}]
dependencies = []

[project.scripts]
dmn = "datamodel_navigator.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
